Honor configuration for Web Shortcuts.

Rekonq will no longer ignore options "Enable Web shortcuts" and "Use
preferred shortcuts only".

This commit also removes the conditional compilation directives
introduced in commit 14e028 as rekonq 2.x now depends on 4.9.

BUG: 309470
REVIEW: 108902

Signed-off-by: Andrea Diamantini <adjam7@gmail.com>